src/compiler/parse/snapshots/rlox__compiler__parse__parser__tests__remaining_tokens.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"print 1; x\")"
---
stderr:
Error: 
   ╭─[<unknown>:?:?]
   │
 1 │ print 1; x
   │          ┬  
   │          ╰── This statement should be terminated with ;
   │          │  
   │          ╰── Expected ;
───╯


